src/test/ui/impl-trait/in-ctfe/enum-discr.stderr
error: unable to use constant with a hidden value in the type system
  --> $DIR/enum-discr.rs:22:11
   |
LL |     Bar = output(yeet()),
   |           ^^^^^^^^^^^^^^

error: aborting due to previous error

